gcc/testsuite/rust/rustc/ui/issues/issue-24446.rs
fn main() {
    static foo: dyn Fn() -> u32 = || -> u32 {
// { dg-error ".E0277." "" { target *-*-* } .-1 }
        0
    };
}

